Fix table sizing behavior when text is truncated

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -303,8 +303,7 @@ body::before {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 100%;
-  max-width: 0;
+  max-width: 1px;
 }
 
 .table th {
